v0.0.6
------

 - Partials path is now not ignored by default
 - Added support for blocks for `yield_content` (as default text)

v0.0.5 - 2010-05-30
-------------------

 - Implemented `content_for` and `yield_content` helpers
 - Added `partials_path` config variable
 - Changed helper method `partial`s syntax (from `partial X, :locals => { ... }` to `partial X, ...`)
 - Line numbers for errors are shown now
 - Added rudimentary 404 page
 - Added `hyde_requirement` config variable -- Hyde will now not proceed if the project needs a later version of Hyde
 - Extensions are now auto-guessed (for example, 'foo.less' will be accessible as 'foo.css')

v0.0.4 - 2010-05-25
-------------------
 - First public release