@@ -3,39 +3,47 @@ module Hyde
     def partial(partial_path, locals = {})
       begin
         p = project[partial_path.to_s, :Partial]
-        p.referrer = self.referrer
+        p.referrer = (referrer || self)
         p.render locals
+
       rescue ::Hyde::NotFound
         "<!-- Can't find #{partial_path.to_s} -->"
       end
     end
 
     def content_for(key, &block)
-      content_blocks[key.to_sym] = block
+      content_block[key.to_sym] = block
     end
 
     def has_content?(key)
-      content_blocks.keys.include? key.to_sym
+      content_block.keys.include? key.to_sym
     end
 
-    def yield_content(key, *args)
-      block = content_blocks[key.to_sym]
+    def yield_content(key, *args, &default_block)
+      block = content_block[key.to_sym]
 
       if respond_to?(:block_is_haml?) && block_is_haml?(block)
         capture_haml *args, &block
-      elsif block.is_a? Proc
+
+      elsif block.respond_to?(:call)
         block.call *args
+
+      elsif block_given? and respond_to?(:capture_haml)
+        capture_haml &default_block
+
       elsif block_given?
         yield
+
       else
         ''
       end
     end
 
   protected
-    def content_blocks
+    def content_block
+      file_key = (referrer || self).to_sym
       @@content_blocks ||= Hash.new
-      @@content_blocks[referrer.to_sym] ||= Hash.new { |h, k| h[k] = [] }
+      @@content_blocks[file_key] ||= Hash.new
     end
   end
 end
