@@ -15,7 +15,7 @@ module Hyde
     def layout=(value)
       super value
       @page.layout = @page.project[value, :Layout]
-      @page.layout.referrer = page.referrer
+      @page.layout.referrer = (page.referrer || page)
     end
   end
 end
