@@ -1,0 +1,14 @@
+!!! 5
+%html(lang='en')
+  %head
+    %meta(charset='UTF-8')
+    %title Document
+  %body
+    #all
+      #content
+        = yield
+
+      #sidebar
+        = yield_content :sidebar do
+          %div
+            Default sidebar
