@@ -1,0 +1,6 @@
+layout: cf
+--
+- content_for :sidebar do
+  Sidebor
+
+Content here
