@@ -1,0 +1,3 @@
+layout: cf
+--
+Content here, no sidebar
