@@ -1,0 +1,17 @@
+<!DOCTYPE html>
+<html lang='en'>
+  <head>
+    <meta charset='UTF-8' />
+    <title>Document</title>
+  </head>
+  <body>
+    <div id='all'>
+      <div id='content'>
+        Content here
+      </div>
+      <div id='sidebar'>
+        Sidebor
+      </div>
+    </div>
+  </body>
+</html>
